# assignment-3

./: A3_SheetPb2_20220429.cpp  A3_SheetPb5_20220429.cpp  A3_sheetpb3_20220431.cpp  A3_sheetpb6_20220431.cpp  Mahmoud-20220431-problem3.cpp  Mahmoud-20220431-problem6.cpp  khalid-20220117-problem1.cpp  khalid-20220117-problem4.cpp  problem-3.cxx
Mazen_20220429_Problem-2/: main.cpp  stringSet.cpp  stringSet.h
Mazen_20220429_problem-5/: Task_Manager.cpp  Task_Manager.h  main.cpp  taskList.txt
final/: App.cpp  CMakeLists.txt
final/X_O/include/: BoardGame_Classes.hpp
final/X_O/src/: GameRunner.cpp  X_O_Board.cpp
final/include/: BoardGame_classes.hpp
redo/: CMakeLists.txt  app.cpp
redo/Tic_Tac_Teo/: Tic_Tac_Teo_Board.cpp  Tic_Tac_Teo_GameManager.cpp  Tic_Tac_Teo_Runner.cpp
redo/connect 4/: fourByfour.cpp  fourByfour_RandomPlayer.cpp  run_Connect4.cpp
redo/include/: BoardGame_Classes.hpp  pyramicGame_Classes.hpp
redo/pyramic/: Pyramic_Random_Player.cpp  Pyramic_XO_Board.cpp  run_pyramic.cpp
redo/xo/: GameManager.cpp  Player.cpp
